# elikopy

./: .gitignore  .readthedocs.yaml  README.md  Singularity_elikopy  code_sructure.txt  folder_structure.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
Tests/: learn_dipy.ipynb  test.py
WorkflowImplementation/: elikopy.py  utils.py
anonymizer/: anonymizer.py
docs/: conf.py  contributing.rst  elikopy.rst  elikopy_project.rst  elikopy_usage.rst  examples.rst  index.rst  installation.rst  introduction.rst  license.rst  metrics.rst  metrics_examples.rst  modules.rst  other_data.rst  other_examples.rst  other_utils.rst  preprocessing_T1.rst  preprocessing_dmri.rst  preprocessing_examples.rst  requirements.txt  stats.rst  stats_examples.rst  stats_tbss.rst
elikopy/: __init__.py  core.py  elikopy.py  individual_subject_processing.py  modelSynb0Disco.py  mouse.py  registration.py  utils.py  utilsSynb0Disco.py
tests/: dti.py
