[metadata]
name = elikopy
version = 0.2.2
author = qdessain, msimon
description = A set of tools for analysing dMRI
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Hyedryn/elikopy
project_urls =
    Bug Tracker = https://github.com/Hyedryn/elikopy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
